src/objects/ADvendio__Advertiser_Agency_relation__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__ActiveFrom__c</fullName>
        <label>Active from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ActiveUntil__c</fullName>
        <label>Active until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Advertised_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the name of the brand which is being advertised by the relation.</description>
        <inlineHelpText>Enter the name of the brand which is being advertised by the relation.</inlineHelpText>
        <label>Advertised Brand</label>
        <referenceTo>ADvendio__Advertised_Brand__c</referenceTo>
        <relationshipLabel>Advertiser Agency relations</relationshipLabel>
        <relationshipName>Advertiser_Agency_relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Advertiser__c</fullName>
        <description>Enter the corresponding advertiser&apos;s name.</description>
        <inlineHelpText>Enter the corresponding advertiser&apos;s name.</inlineHelpText>
        <label>Advertiser</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Account - Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertiser Agency relations</relationshipLabel>
        <relationshipName>Advertiser_Agency_relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyDiscount__c</fullName>
        <label>Agency Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the agency&apos;s name.</description>
        <inlineHelpText>Enter the agency&apos;s name.</inlineHelpText>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Account - Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertiser Agency relations (Agency)</relationshipLabel>
        <relationshipName>Advertiser_Agency_relations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Contact_Advertiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter one of the advertiser&apos;s contacts.</description>
        <inlineHelpText>Enter one of the advertiser&apos;s contacts.</inlineHelpText>
        <label>Contact Advertiser</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.ADvendio__Advertiser__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advertiser Agency relations</relationshipLabel>
        <relationshipName>Advertiser_Agency_relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Contact_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter one of the agency&apos;s contacts.</description>
        <inlineHelpText>Enter one of the agency&apos;s contacts.</inlineHelpText>
        <label>Contact Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.ADvendio__Agency__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advertiser Agency relations (Contact Agency)</relationshipLabel>
        <relationshipName>Advertiser_Agency_relations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__NewMediaCampaign__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ADvendio__NewMediaCampaign?id=&quot; &amp; Id, &quot;New Media Campaign&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Media Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Advertiser Agency relation</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Advertiser__c</columns>
        <columns>ADvendio__Agency__c</columns>
        <columns>ADvendio__ActiveFrom__c</columns>
        <columns>ADvendio__ActiveUntil__c</columns>
        <columns>ADvendio__AgencyDiscount__c</columns>
        <columns>ADvendio__Advertised_Brand__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Advertiser Agency relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advertiser Agency relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>